change setting web api
